--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <block-ui>
 
-  <body class="login-body" style="background-image: url('./assets/images/login-background.jpg')">
+  <body class="login-body">
 
     <div class="container">
       <div class="row">
