--- a/src/app/pages/partners/update/update.component.html
+++ b/src/app/pages/partners/update/update.component.html
@@ -281,7 +281,7 @@
                 <div class="col-sm-7">
                   <div class="float-right ">
                     <a class="btn btn-danger " type="cancel" style="margin-right: 10px;
-    min-width: 100px;" routerLink="/partners/">Cancel</a>
+    min-width: 100px;" routerLink="/onboarding/partners">Cancel</a>
                     <button [disabled]="beFormAdd.invalid" class="btn btn-success " type="submit"
                       style="min-width: 100px;">Submit</button>
                   </div>
