--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -9,6 +9,10 @@
         </span>
       </div>
 
+      <!--<div class="row mb-3"> <canvas id="lineChart"></canvas></div>
+      <div class="row mb-3"><canvas id="barChart"></canvas></div>
+      <div class="row mb-3"><canvas id="pieChart"></canvas></div>-->
+
       <div class="row mb-3"
         *ngIf="currentUser.user.role == 'Lipalater admin' || currentUser.user.role == 'Lipalater Super admin'">
 
