--- a/src/app/pages/partners/partners.component.html
+++ b/src/app/pages/partners/partners.component.html
@@ -5,7 +5,7 @@
 
       <div class="widget-controls row">
         <div class="col-sm-6">
-          <a class="btn btn-info btn-sm mb-1" routerLink="/partners/create"><i class="fa fa-plus"></i> Add Partner</a>
+          <a class="btn btn-info btn-sm mb-1" routerLink="create"><i class="fa fa-plus"></i> Add Partner</a>
         </div>
         <div class="col-sm-2"></div>
         <div class="col-sm-4">
