--- a/src/app/pages/onboarding/onboarding.component.html
+++ b/src/app/pages/onboarding/onboarding.component.html
@@ -4,14 +4,14 @@
       <div class="box-body">
 
         <nav id="sidebar" *ngIf="currentUser">
-          <div class="sidebar-header"> Onboarding Statistics
+          <div class="sidebar-header"> Onboarding Menu
           </div>
           <div class="container demo d-none d-md-block"></div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
-              <a class="nav-link sales-link" routerLink="/">
-                Statistics
-                <p>onboarding</p>
+              <a class="nav-link sales-link" routerLink="dashboard">
+                Onboarding
+                <p>stats</p>
               </a>
             </li>
             <li class="list-group-item">
