--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,6 @@
 .nav-item {
-  border-right: 2px solid #585858;
+  /* border-right: 2px solid #585858; */
+  border-right: 2px solid #F1F3F6
 }
 
 
@@ -67,6 +68,10 @@ a[aria-expanded="true"] {
   background: #fff;
 }
 
+.list-group-flush .list-group-item {
+  padding-top: 30px !important;
+}
+
 #sidebar ul li a:hover {
 
   border-right: solid 4px #7BA73A;
@@ -75,6 +80,10 @@ a[aria-expanded="true"] {
 
 .top-link,
 .top-link:visited {
-  background-color: #F1F3F6;
+  background-color: #fff;
   color: #7BA73A;
+}
+
+.bg-light {
+  background-color: #fff !important;
 }
